Added Portfolio page
for all the projects that aren't really games, but I still want to showcase anyway.

Also fixed the background color on the consulting page...

--- a/soverance.com/Views/Home/Games.cshtml
+++ b/soverance.com/Views/Home/Games.cshtml
@@ -38,7 +38,7 @@
                                 Ethereal Legends
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
-                                Battle deadly monsters, topple huge bosses, wield numerous weapons, cast powerful spells, solve challenging puzzles, and use all the tools at your disposal to restore peace to the Realms.
+                                A modern indie action RPG built with Unreal Engine 4.
                             </div>
                             <div class="rating text-center mt20">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -66,7 +66,7 @@
                                 Endless Reach Mobile
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
-                                Send your starfighter drone out into the unknown, and use it to battle your way through the alien hordes and make the regions safe for colonization. The future of humanity depends on you!
+                                A hardcore space shoot 'em up for mobile devices.
                             </div>
                             <div class="rating text-center mt20">
                                 <i class="fa fa-star" aria-hidden="true"></i>
