--- a/soverance.com/Views/Home/Portfolio.cshtml
+++ b/soverance.com/Views/Home/Portfolio.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Games";
+    ViewData["Title"] = "Portfolio";
 }
 
 <!-- PAGE NAME START -->
@@ -7,11 +7,12 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Games
+                Portfolio
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
-                <span class="color-1">Games</span>
+                <a href="#">Studio</a> /
+                <span class="color-1">Portfolio</span>
             </div>
         </div>
     </div>
@@ -24,21 +25,21 @@
             <div class="games-container">
                 <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
                     <div class="image-container">
-                        <img src="~/images/games/game-1.jpg" alt="" class="img-responsive">
+                        <img src="~/images/portfolio/preview-echosphere.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="bottom-container">
                         <div class="table">
                             <div class="table-row">
-                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Steam</div>
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Oculus VR</div>
                                 <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Feb 21, 2017</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
                             <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
-                                Ethereal Legends
+                                Echosphere
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
-                                Battle deadly monsters, topple huge bosses, wield numerous weapons, cast powerful spells, solve challenging puzzles, and use all the tools at your disposal to restore peace to the Realms.
+                                Realtime audio visualization in virtual reality
                             </div>
                             <div class="rating text-center mt20">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -52,21 +53,49 @@
                 </div>
                 <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
                     <div class="image-container">
-                        <img src="~/images/games/game-2.jpg" alt="" class="img-responsive">
+                        <img src="~/images/portfolio/preview-ctf-elemental.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="bottom-container">
                         <div class="table">
                             <div class="table-row">
-                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Android</div>
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">PC Mod</div>
                                 <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
                             <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
-                                Endless Reach Mobile
+                                CTF-Elemental
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
-                                Send your starfighter drone out into the unknown, and use it to battle your way through the alien hordes and make the regions safe for colonization. The future of humanity depends on you!
+                                Capture the Flag map for Unreal Tournament
+                            </div>
+                            <div class="rating text-center mt20">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
+                    <div class="image-container">
+                        <img src="~/images/portfolio/preview-ffxi-fighter.jpg" alt="" class="img-responsive">
+                    </div>
+                    <div class="bottom-container">
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">M.U.G.E.N.</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                            </div>
+                        </div>
+                        <div class="text-center mt20">
+                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                                FFXI: Fighter
+                            </a>
+                            <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
+                                A 2D fighting game featuring characters from Final Fantasy XI
                             </div>
                             <div class="rating text-center mt20">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -77,7 +106,91 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>
+                <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
+                    <div class="image-container">
+                        <img src="~/images/portfolio/preview-soverance.com.jpg" alt="" class="img-responsive">
+                    </div>
+                    <div class="bottom-container">
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">ASP.NET Core</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                            </div>
+                        </div>
+                        <div class="text-center mt20">
+                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                                soverance.com
+                            </a>
+                            <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
+                                This very website is open source, and you can help contribute!
+                            </div>
+                            <div class="rating text-center mt20">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
+                    <div class="image-container">
+                        <img src="~/images/portfolio/preview-exodus.jpg" alt="" class="img-responsive">
+                    </div>
+                    <div class="bottom-container">
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">.NET / PowerShell</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                            </div>
+                        </div>
+                        <div class="text-center mt20">
+                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                                Exodus
+                            </a>
+                            <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
+                                An open-source backup tool for Hyper-V clusters and file shares.
+                            </div>
+                            <div class="rating text-center mt20">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
+                    <div class="image-container">
+                        <img src="~/images/portfolio/preview-indiedev-podcast.jpg" alt="" class="img-responsive">
+                    </div>
+                    <div class="bottom-container">
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Soundcloud</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                            </div>
+                        </div>
+                        <div class="text-center mt20">
+                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                                #IndieDEV Podcast
+                            </a>
+                            <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
+                                Join us for couch collaboration at Soverance Studios
+                            </div>
+                            <div class="rating text-center mt20">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
