--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -279,9 +279,6 @@
                                         <a asp-area="" asp-controller="Home" asp-action="About">About</a>
                                     </li>
                                     <li>
-                                        <a asp-area="" asp-controller="Home" asp-action="Consulting">Consulting</a>
-                                    </li>
-                                    <li>
                                         <a asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
                                     </li>
                                     <li class="menu-item-has-children">
@@ -293,7 +290,10 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a asp-area="" asp-controller="Home" asp-action="Gallery">Gallery</a>
+                                        <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="Home" asp-action="Consulting">Consulting</a>
                                     </li>
                                 </ul>
                             </li>
