Fixed links in Portfolio

--- a/soverance.com/Views/Home/Portfolio.cshtml
+++ b/soverance.com/Views/Home/Portfolio.cshtml
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="/echosphere" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 Echosphere
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="/ctf-elemental" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 CTF-Elemental
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="/ffxi-fighter" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 FFXI: Fighter
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="https://github.com/Soverance/soverance.com" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 soverance.com
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="https://github.com/Soverance/Exodus" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 Exodus
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="text-center mt20">
-                            <a href="single-game.html" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                            <a href="https://soundcloud.com/indiedev-1" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
                                 #IndieDEV Podcast
                             </a>
                             <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
