Added Echosphere portfolio page

--- a/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
+++ b/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
@@ -77,8 +77,9 @@
                         Released Jul 12, 2014
                     </div>
                 </div>
-                <div class="uppercase fsize-32 fweight-700 font-agency color-white lheight-normal">
-                    Endless Reach
+                <br />
+                <div class="image-wrapper">
+                    <img src="~/images/logos/endlessreachmobile.png" alt="" class="img-responsive center-block">
                 </div>
                 <div class="mt50 lheight-26 fweight-300">
                     <p>
@@ -91,12 +92,12 @@
                         The future of humanity depends on you!
                     </p>
                     <p>
-                        Designed exclusively for mobile devices, this punishingly difficult shmup
+                        Designed exclusively for mobile devices, this free shmup provides challenging gameplay great for short bursts while on the go.
                     </p>
                 </div>
                 <div class="mt60 table g-bottom">
                     <div class="table-cell valign-middle">
-                        <a href="https://play.google.com/store/apps/details?id=com.Soverance.EndlessReach&hl=en_US" class="btn gradient color-white plr60 ptb19">
+                        <a href="https://play.google.com/store/apps/details?id=com.Soverance.EndlessReach&hl=en_US" class="btn gradient color-white plr60 ptb19 center-block">
                             <img src="~/images/logos/google-play-logo.png" alt="">
                         </a>
                     </div>
