--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Index.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Index.cshtml
@@ -87,8 +87,9 @@
                         Released Feb 21, 2017
                     </div>
                 </div>
-                <div class="uppercase fsize-32 fweight-700 font-agency color-white lheight-normal">
-                    Ethereal Legends
+                <br />
+                <div class="image-wrapper">
+                    <img src="~/images/logos/ethereal.png" alt="" class="img-responsive center-block">
                 </div>
                 <div class="mt30 lheight-26 fweight-300">
                     <div class="table-cell valign-middle">
