--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -289,8 +289,13 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li>
+                                    <li class="menu-item-has-children">
                                         <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a>
+                                        <ul class="sub-menu">
+                                            <li>
+                                                <a asp-area="Echosphere" asp-controller="Echosphere" asp-action="Index">Echosphere</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li>
                                         <a asp-area="" asp-controller="Home" asp-action="Consulting">Consulting</a>
