--- a/soverance.com/Views/Home/Index.cshtml
+++ b/soverance.com/Views/Home/Index.cshtml
@@ -1686,7 +1686,7 @@
                     <div class="tab-pane fade active in text-left clearfix" id="stream-1">
                         <div class="left-col col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="video-bl equal-height" >
-                                <video id="LatestVideo" class="equal-height vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto"
+                                <video id="LatestVideoProfile" class="equal-height vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto"
                                        data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "@Model[7].VideoWatchLink"}}'></video>                                
                                 <div class="video-bottom">
                                     <div class="video-title">
@@ -1754,7 +1754,7 @@
                     <div class="tab-pane fade in competition text-left clearfix" id="stream-3">
                         <div class="left-col col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="video-bl equal-height">
-                                <video id="LatestVideo" class="equal-height vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto"
+                                <video id="LatestTutorial" class="equal-height vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto"
                                        data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "@ViewBag.LatestTutorial.VideoWatchLink"}}'></video>
                                 <div class="video-bottom">
                                     <div class="video-title">
