Added FFXI: Fighter portfolio page

--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -295,6 +295,9 @@
                                             <li>
                                                 <a asp-area="Echosphere" asp-controller="Echosphere" asp-action="Index">Echosphere</a>
                                             </li>
+                                            <li>
+                                                <a asp-area="FinalFantasyFighter" asp-controller="FinalFantasyFighter" asp-action="Index">FFXI: Fighter</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>
