added copyright notice

--- a/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
+++ b/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
@@ -178,7 +178,12 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>            
+            </div>  
+            <p>
+                This is a fan-created 2D fighting game based on Final Fantasy XI and powered by Elecbyte’s M.U.G.E.N. engine. 
+                Final Fantasy XI is © 2001 - 2018 SQUARE ENIX CO., LTD. All Rights Reserved.  
+                Elecbyte and the M.U.G.E.N. engine are © 1999-2011 Elecbyte. All Rights Reserved.
+            </p>
         </div>
     </div>
 </section>
