fixed 404 on team page
linking to my profile

--- a/soverance.com/Areas/Team/Views/Team/Index.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/Index.cshtml
@@ -28,7 +28,7 @@
                         <img src="~/images/team/scott-mccutchen-beard.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="text-container background-4 text-center">
-                        <a href="/Team/ScottMcCutchen" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
+                        <a href="/team/scott-mccutchen" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
                             Scott McCutchen
                         </a>
                         <div class="position mt10">
