Reorganized main menu
cleaned it up significantly.  much more orderly.

also reorganized portfolio page.

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
@@ -27,10 +27,10 @@
                 <div class="posts-nav">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="/ethereal/guide/loot" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/loot-pre-header.jpg');">
+                            <a href="/ethereal/guide" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/guide-world.jpg');">
                                 <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Loot Table</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Find out where all the best spells, weapons, and armor can be found!</div>
+                                    <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Game Guide</div>
+                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Learn more about Ethereal's world, combat systems, and loot.</div>
                                 </div>
                             </a>
                         </div>
