--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
@@ -24,27 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="full-col col-lg-10 col-md-10 col-md-push-1">
-                <div class="posts-nav">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a href="/ethereal/guide/loot" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/loot-pre-header.jpg');">
-                                <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Loot Table</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Find out where all the best spells, weapons, and armor can be found!</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <a href="/ethereal/guide/ansel" class="nav_next nav-btn td-none" style="background-image: url('/images/games/ethereal/ansel-pre-header.jpg');">
-                                <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Screenshots with Ansel</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Learn how to take beautiful high quality screenshots with Nvidia Ansel.</div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="post-content mt60">
+                <div class="post-content">
                     <div class="post-image">
                         <img src="~/images/games/ethereal/guide-header.jpg" alt="">
                     </div>
@@ -65,8 +45,9 @@
                                 </div>
                             </div>
                             <div class="mt20">
-                                <p>Welcome to the <i>Ethereal Legends</i> Game Guide!</p>
-                                <p>Here on this site is where you'll find the information you’ll need to know to in order to make your experience playing Ethereal Legends the best it can possibly be. Use the main menu to navigate through the various topics; peruse update notes in the Version History, learn more about the game’s features and the options at your disposal, check out the game’s source code, or get involved in the community around Ethereal.</p>
+                                <p class="text-center">Welcome to the <i>Ethereal Legends</i> Game Guide!</p>
+                                <p class="text-center">Here on this site is where you'll find the information you’ll need to know to in order to make your experience playing Ethereal Legends the best it can possibly be.</p>
+                                <p class="text-center">Scroll down and use the links below to navigate through the various topics; explore the world and systems that make up Ethereal, peruse update notes in the Version History, learn more about the game’s features and the options at your disposal, check out the game’s source code, or get involved in the community around Ethereal Legends.</p>
                             </div>
                             <div class="post-quote mt120">
                                 <blockquote class="p40 text-center">
