--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -229,28 +229,11 @@
                                     <li class="menu-item-has-children">
                                         <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Index">Ethereal Legends</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item-has-children">
-                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a>
-                                                <ul class="sub-menu">
-                                                    <li>
-                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="World">World</a>
-                                                    </li>
-                                                    <li>
-                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Systems">Systems</a>
-                                                    </li>
-                                                    <li>
-                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Loot">Loot</a>
-                                                    </li>
-                                                    <li>
-                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Ansel">Ansel</a>
-                                                    </li>
-                                                </ul>
+                                            <li>
+                                                <a href="https://store.steampowered.com/app/428980/Ethereal_Legends/">Buy on Steam</a>
                                             </li>
                                             <li>
-                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Versions">Versions</a>
-                                            </li>
-                                            <li>
-                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="EULA">EULA</a>
+                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Game Guide</a>
                                             </li>
                                             <li>
                                                 <a href="https://github.com/Soverance/EtherealLegends">Source Code</a>
@@ -260,7 +243,10 @@
                                     <li class="menu-item-has-children">
                                         <a asp-area="EndlessReach" asp-controller="EndlessReach" asp-action="Index">Endless Reach</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item-has-children">
+                                            <li>
+                                                <a href="https://play.google.com/store/apps/details?id=com.Soverance.EndlessReach&hl=en_US">Free Download</a>
+                                            </li>
+                                            <li>
                                                 <a href="https://github.com/Soverance/EndlessReach">Source Code</a>
                                             </li>
                                         </ul>
@@ -291,14 +277,6 @@
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a>
-                                        <ul class="sub-menu">
-                                            <li>
-                                                <a asp-area="Echosphere" asp-controller="Echosphere" asp-action="Index">Echosphere</a>
-                                            </li>
-                                            <li>
-                                                <a asp-area="FinalFantasyFighter" asp-controller="FinalFantasyFighter" asp-action="Index">FFXI: Fighter</a>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li>
                                         <a asp-area="" asp-controller="Home" asp-action="Consulting">Consulting</a>
