--- a/soverance.com/Views/Home/Portfolio.cshtml
+++ b/soverance.com/Views/Home/Portfolio.cshtml
@@ -31,7 +31,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Oculus VR</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Feb 21, 2017</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Unreleased</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
@@ -59,7 +59,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">ASP.NET Core</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Sep 15, 2018</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
@@ -87,7 +87,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">PC Mod</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Mar 14, 2015</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
@@ -115,7 +115,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">.NET / PowerShell</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Mar 22, 2018</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
@@ -143,7 +143,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">M.U.G.E.N.</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Dec 20, 2012</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
@@ -171,7 +171,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Soundcloud</div>
-                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Jul 12, 2014</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Apr 2015 - Jun 2016</div>
                             </div>
                         </div>
                         <div class="text-center mt20">
