FFXI Fighter Documentation added

--- a/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
+++ b/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
@@ -97,7 +97,7 @@
                 </div>
                 <div class="mt60 table g-bottom">
                     <div class="table-cell valign-middle">
-                        <a href="https://play.google.com/store/apps/details?id=com.Soverance.EndlessReach&hl=en_US" class="btn gradient color-white plr60 ptb19 center-block">
+                        <a href="https://play.google.com/store/apps/details?id=com.Soverance.EndlessReach&hl=en_US" class="btn gradient color-white plr60 ptb19">
                             <img src="~/images/logos/google-play-logo.png" alt="">
                         </a>
                     </div>
