--- a/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
+++ b/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
@@ -129,6 +129,13 @@
                         <video id="ffxifighter" class="vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto" width="570" height="450" poster="~/images/games/ffxifighter-slide-1.jpg"
                                data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=DCktm5W-Am0"}}'></video>
                     </div>
+                    <div class="mt60 table g-bottom">
+                        <div class="table-cell valign-middle">
+                            <a href="/ffxi-fighter/documentation" class="btn gradient color-white plr60 ptb19">
+                                View Documentation
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="widget-wrapper">
@@ -178,10 +185,11 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>  
+            </div>
+            
             <p>
-                This is a fan-created 2D fighting game based on Final Fantasy XI and powered by Elecbyte’s M.U.G.E.N. engine. 
-                Final Fantasy XI is © 2001 - 2018 SQUARE ENIX CO., LTD. All Rights Reserved.  
+                This is a fan-created 2D fighting game based on Final Fantasy XI and powered by Elecbyte’s M.U.G.E.N. engine.
+                Final Fantasy XI is © 2001 - 2018 SQUARE ENIX CO., LTD. All Rights Reserved.
                 Elecbyte and the M.U.G.E.N. engine are © 1999-2011 Elecbyte. All Rights Reserved.
             </p>
         </div>
