--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -230,7 +230,7 @@
                                         <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Index">Ethereal Legends</a>
                                         <ul class="sub-menu">
                                             <li>
-                                                <a href="https://store.steampowered.com/app/428980/Ethereal_Legends/">Buy on Steam</a>
+                                                <a href="https://store.steampowered.com/app/428980/">Buy on Steam</a>
                                             </li>
                                             <li>
                                                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Game Guide</a>
